added js for forecasts

--- a/index.html
+++ b/index.html
@@ -18,36 +18,42 @@
     <header class="text-center">
         <h1>Weather Dashboard</h1>
     </header>
-
-        <div class="row">
-            <div class="col-sm-4 searchBar">
-            <input type="text" placeholder="Search.."></input>
-            <button>Search</button>
+    <div class="row" id="container">
+        <div class="col-m-4">
+            <div class="searchBar">
+            <input id="search-input" type="text" placeholder="Search.."></input>
+            <button id="submit-search">Search</button>
             </div>
-            
-            <div class="col-sm-8 current-weather">
-              <h2>PLACE DATE</h2>
+            <li></li>
+            <li></li>
+        </div>
+            <div class="col-m-8" id="current-weather">
+              <h2 id="city-date">Current Weather Forecast</h2>
                 <div>
-                    <p id="temp">Temp:</p>
+                    <p id="temp">Temperature:</p>
                     <p id="wind">Wind:</p>
                     <p id="humidity">Humidity:</p>
-                    <p id="uv-index">UV Index:</p>
                 </div>
+                <div class="col-m-8" id="five-forecast">
+                  <h2>5 Day Forecast</h2>
+                  <div id="five-day">
+                    <div class="col-sm-3 mb-3 mb-sm-0">
+                      <div class="card row">
+                        <div class="card-body">
+                          <h5 class="card-title">Five-Day Forecast</h5>
+                          <p class="five-img"></p>
+                          <p class="five-temp">Temperature:</p>
+                          <p class="five-wind">Wind:</p>
+                          <p class="five-humidity">Humidity:</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+          </div>
             </div>
-        </div>
-  <div>
-    <h2>5 Day Forecast</h2>
-    <div class="row">
-      <card>
-        <h3 class="five-date">date</h3>
-        <p class="five-temp">temp:</p>
-        <p class="five-wind">wind:</p>
-        <p class="five-humidity">humidity:</p>
-      </card>
-    </div>
-  </div>
+           
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src = "./script.js"></script>
 </body>
 </html>
